# ngrest

./: .gitignore  .travis.yml  CMakeLists.txt  Project.cbproj  Project.cbproj.local  Project.stat  README.md  main.cpp  ngrest.files  ngrest.includes  run_cppcheck  update_qtcreator_files  ¿Qué es un pull request  - Aprende GIT.html
Win32/Debug/: Project.ilc  Project.ils
__history/: Project.cbproj.local.~1~  main.cpp.~2~  main.cpp.~3~
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/src/: Callback.h  HttpException.h  HttpMessage.cpp  HttpMessage.h  HttpMethod.h  HttpStatus.cpp  HttpStatus.h  Message.cpp  Message.h  Nullable.h  ObjectModel.cpp  ObjectModel.h  ObjectModelUtils.h  Service.cpp  Service.h
core/engine/: CMakeLists.txt
core/engine/src/: Deployment.cpp  Deployment.h  Engine.cpp  Engine.h  Filter.h  FilterDeployment.cpp  FilterDeployment.h  FilterDispatcher.cpp  FilterDispatcher.h  FilterGroup.h  Handler.h  HttpCommon.cpp  HttpCommon.h  HttpStatus.h  HttpTransport.cpp  HttpTransport.h  LatestLibs.h  Looper.h  Phase.h  ServiceDescription.cpp  ServiceDescription.h  ServiceDispatcher.cpp  ServiceDispatcher.h  ServiceGroup.cpp  ServiceGroup.h  ServiceWrapper.cpp  ServiceWrapper.h  SnapShots.cpp  SnapShots.h  Transport.cpp  Transport.h
core/json/: CMakeLists.txt
core/json/src/: JsonReader.cpp  JsonReader.h  JsonTypes.cpp  JsonTypes.h  JsonWriter.cpp  JsonWriter.h
core/server/: CMakeLists.txt
core/server/src/: ClientCallback.h  ClientHandler.cpp  ClientHandler.h  Server.cpp  Server.h  main.cpp  servercommon.h  strutils.h
core/service/: CMakeLists.txt
core/utils/: CMakeLists.txt
core/utils/src/: Callback.h  DynamicLibrary.cpp  DynamicLibrary.h  ElapsedTimer.cpp  ElapsedTimer.h  Error.cpp  Error.h  Exception.cpp  Exception.h  File.cpp  File.h  Log.cpp  Log.h  LogStream.h  MemPool.cpp  MemPool.h  MemPooler.cpp  MemPooler.h  Plugin.h  PluginExport.h  Runtime.cpp  Runtime.h  console.cpp  fileline.h  fromcstring.h  fromstring.h  ngrestutilsexport.h  static.h  stringutils.h  tocstring.h  tostring.h
core/xml/: CMakeLists.txt
core/xml/src/: Attribute.cpp  Attribute.h  Declaration.cpp  Declaration.h  Document.cpp  Document.h  Element.cpp  Element.h  Exception.h  Namespace.cpp  Namespace.h  Node.cpp  Node.h  Value.cpp  Value.h  XmlReader.cpp  XmlReader.h  XmlWriter.cpp  XmlWriter.h  ngrestxmlexport.h
docker/: Dockerfile  README.md  dockerBuild.sh  dockerRun.sh  ngrest.conf  ngrest.load  ports.conf
examples/: CMakeLists.txt
examples/crud/: CMakeLists.txt
examples/echo/: CMakeLists.txt  Echo.cpp  Echo.h
examples/echo/src/: Echo.cpp  Echo.h
libs/: libpq.lib  pqConnect.cpp  pqConnect.hpp
modules/: CMakeLists.txt
modules/apache2/: CMakeLists.txt
modules/apache2/conf/: ngrest.conf  ngrest.load
modules/apache2/src/: mod_ngrest.c  ngrest_server.cpp  ngrest_server.h
modules/nginx/: CMakeLists.txt
modules/nginx/src/: mod_ngrest_nginx.c
modules/share/: ngrest_server.cpp  ngrest_server.h
scripts/: inst  ngrest  ngrest.cmd
server/: CMakeLists.txt  Doxyfile  README.md  ngrest.files  ngrest.includes
server/core/: CMakeLists.txt
server/examples/: CMakeLists.txt
server/examples/crud/: CMakeLists.txt
server/examples/crud/src/: Crud.h
server/modules/: CMakeLists.txt
server/modules/apache2/: CMakeLists.txt
server/modules/apache2/conf/: ngrest.conf
server/scripts/: inst  ngrest  ngrest.cmd
server/services/: CMakeLists.txt
server/services/favicon/: CMakeLists.txt
server/services/favicon/src/: Favicon.cpp  Favicon.h
server/tests/: CMakeLists.txt
server/tests/deployment/: CMakeLists.txt
server/tests/deployment/src/: TestDeployment.cpp  TestDeploymentWrapper.cpp  TestDeploymentWrapper.h  TestFilterGroup.cpp  TestServiceGroup.h  main.cpp
server/tests/filters/: CMakeLists.txt
server/tests/filters/src/: TestFilterGroup.cpp
server/tests/json/: CMakeLists.txt
server/tests/json/src/: jsontest.cpp
server/tools/ngrestcg/templates/addservicehpp/: CMakeLists.txt
services/: CMakeLists.txt
services/favicon/: CMakeLists.txt  gen_favicon_ico_h
services/serverstatus/: CMakeLists.txt
services/serverstatus/src/: ServerStatus.cpp  ServerStatus.h
tests/: CMakeLists.txt
tests/deployment/: CMakeLists.txt
tests/deployment/src/: TestDeployment.cpp  TestDeployment.h  TestDeploymentWrapper.cpp  TestDeploymentWrapper.h  TestFilterGroup.cpp  TestFilterGroup.h  TestServiceGroup.cpp  TestServiceGroup.h  main.cpp
tests/filters/: CMakeLists.txt
tests/json/: CMakeLists.txt
tests/json-benchmark/: CMakeLists.txt
tests/json-benchmark/src/: jsonbenchmark.cpp
tests/service/: CMakeLists.txt  test_client  test_server_client
tests/service/src/: TestService.cpp  TestService.h
tools/: CMakeLists.txt
tools/ngrestcg/: CMakeLists.txt
tools/ngrestcg/src/: CodeGen.cpp  CodeGen.h  XmlGen.cpp  XmlGen.h  main.cpp
tools/ngrestcg/templates/addprojectservice/: CMakeLists.txt  codegen.config
tools/ngrestcg/templates/addservice/: CMakeLists.txt  Service.cpp  Service.h
tools/ngrestcg/templates/addservicehpp/: CMakeLists.txt  Service.hpp
tools/ngrestcg/templates/common/: deserialization.cpp  enums.cpp  enums.h  jsonType.h  serialization.cpp  serviceRequest.cpp  serviceResponse.cpp  structs.cpp  typedefs.cpp
tools/ngrestcg/templates/project/: CMakeLists.txt  codegen.config
tools/ngrestcg/templates/service/: ServiceGroupImpl.cpp  ServiceGroupImpl.h  Wrapper.cpp  Wrapper.h  codegen.config
tools/ngrestcgparser/: CMakeLists.txt
tools/ngrestcgparser/src/: CodegenParser.cpp  CodegenParser.h  Interface.cpp  Interface.h  ngrestcodegenparserexport.h  tools.cpp  tools.h
tools/parsers/cpp/: CMakeLists.txt
tools/parsers/cpp/src/: CppParser.cpp  CppParser.h
¿Qué es un pull request  - Aprende GIT_archivos/: analytics.js  anchor.html  api.js  bframe.html  css.css  e-201735.js  estilos.css  events-manager-pro.js  events-manager.js  events_manager.css  principal.js  recaptcha__es.js  scripts.js  styles.css
¿Qué es un pull request  - Aprende GIT_archivos/anchor_data/: afm_7uveIwRh99Mil3WU-UXeHB15BRIkj2oQ7_Yhc5A.js
(+131 files in other folders)
