cmake_minimum_required(VERSION 2.6)

project (ngresttestservice CXX)

set(NGRESTTESTSERVICE_HEADERS TestService.h)

set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(NGRESTTESTSERVICE_CODEGEN_DIR "${PROJECT_BINARY_DIR}/codegen")

PREPEND(NGRESTTESTSERVICE_HEADERS_PATHS ${PROJECT_SOURCE_DIR} ${NGRESTTESTSERVICE_HEADERS})

CODEGEN_FILES(NGRESTTESTSERVICE_CODEGEN_SOURCES ${NGRESTTESTSERVICE_CODEGEN_DIR} ${NGRESTTESTSERVICE_HEADERS})

add_custom_command(OUTPUT ${NGRESTTESTSERVICE_CODEGEN_SOURCES}
    COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/ngrestcg -i "${PROJECT_SOURCE_DIR}" -o ${NGRESTTESTSERVICE_CODEGEN_DIR} -t service ${NGRESTTESTSERVICE_HEADERS}
    DEPENDS ${NGRESTTESTSERVICE_HEADERS_PATHS}
)

file(GLOB NGRESTTESTSERVICE_SOURCES ${PROJECT_SOURCE_DIR}/*.cpp)

list(APPEND NGRESTTESTSERVICE_SOURCES ${NGRESTTESTSERVICE_CODEGEN_SOURCES})

include_directories(${PROJECT_SOURCE_DIR})

add_library(ngresttestservice MODULE ${NGRESTTESTSERVICE_SOURCES})

set_target_properties(ngresttestservice PROPERTIES PREFIX "")
set_target_properties(ngresttestservice PROPERTIES
    LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SERVICES_DIR}"
)

target_link_libraries(ngresttestservice ngrestutils ngrestcommon ngrestjson ngrestengine)
